--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,14 @@
 @import "./info";
 @import "./quiz";
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "poppins", sans-serif;
+  background: $neutral-color;
+  color: $text-color;
+}
+
 .main {
   height: 100vh;
   width: 100%;
@@ -11,10 +19,16 @@
   #{&}__start-btn {
     border: none;
   }
+
+  a {
+    width: 60%;
+    margin: 0;
+    max-width: 200px;
+  }
 }
 
 .btn {
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   background: $neutral-color;
   color: $primary-color;
   font-weight: map-get($font-weights, "medium");
@@ -22,4 +36,5 @@
   box-shadow: grey 0 0 5px 1px;
   font-size: 2rem;
   cursor: pointer;
+  width: 100%;
 }
